--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "numpy.ndarray size changed, may indicate binary incompatibility. Expected 88 from C header, got 80 from PyObject",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-31-fb3711e1756c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtalib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\talib\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m from ._ta_lib import (\n\u001b[0m\u001b[0;32m     53\u001b[0m     \u001b[0m_ta_initialize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_ta_shutdown\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMA_Type\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m__ta_version__\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m     \u001b[0m_ta_set_unstable_period\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mset_unstable_period\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mtalib\\_ta_lib.pyx\u001b[0m in \u001b[0;36minit talib._ta_lib\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: numpy.ndarray size changed, may indicate binary incompatibility. Expected 88 from C header, got 80 from PyObject"
+     ]
+    }
+   ],
    "source": [
     "import talib\n",
     "import numpy as np\n",
@@ -14,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -77,19 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "                 Open       High        Low  ...    Volume      HMA10  POLYNOMIAL9\n Date                                        ...                                  \n2003-01-02   8.295000   8.830000   8.250000  ...  19640400        NaN          NaN\n2003-01-03   8.750000   9.175000   8.675000  ...  15090600        NaN          NaN\n2003-01-06   8.925000   9.595000   8.890000  ...  21209400        NaN          NaN\n2003-01-07   8.935000   9.650000   8.930000  ...  28092600        NaN          NaN\n2003-01-08   9.435000   9.650000   9.280000  ...  19244600        NaN          NaN\n...               ...        ...        ...  ...       ...        ...          ...\n2005-12-23  41.090000  41.099998  40.450001  ...   5070200  40.554567    39.862968\n2005-12-27  40.650002  40.939999  39.849998  ...  11672900  40.270890    39.662767\n2005-12-28  40.099998  40.480000  39.770000  ...  11567900  40.106364    39.479761\n2005-12-29  40.250000  40.349998  39.410000  ...  10116600  39.875950    39.295612\n2005-12-30  39.400002  39.560001  39.049999  ...  12233000  39.549394    39.083352\n\n[756 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('data.csv', parse_dates=True, index_col=0)\n",
+    "df = pd.read_csv('data.csv', parse_dates=True, index_ocl=0)\n",
     "def hma(array2hma: np.array, n: int = 10):\n",
     "    return talib.WMA(2*talib.WMA(array2hma, int(n/2)) - talib.WMA(array2hma, n), int(math.sqrt(n)))\n",
     "\n",
@@ -101,12 +107,108 @@
     "df['POLYNOMIAL9'] = np.r_[np.full(len(df['HMA10'][np.isnan(df['HMA10'])]),np.nan),rolling_poly9(df['HMA10'][~np.isnan(df['HMA10'])].values,252)]\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "a = np.int64(np.zeros(5))\n",
+    "b = np.int64(np.zeros(5))\n",
+    "# a = np.r_(a, b)\n",
+    "c = np.r_[a,b]\n",
+    "print(c)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypingError",
+     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1mnon-precise type pyobject\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of argument at <ipython-input-48-696617391370> (16)\u001b[0m\n\u001b[1m\nFile \"<ipython-input-48-696617391370>\", line 16:\u001b[0m\n\u001b[1mdef thresholding_algo(y, lag, threshold, influence):\n    <source elided>\n    \"\"\"\n\u001b[1m    signals = np.zeros((3, len(y)), dtype=np.float64)  # 生成3行、len(y)列的全0二维数组\n\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n\nThis error may have been caused by the following argument(s):\n- argument 0: \u001b[1mCannot determine Numba type of <class 'pandas.core.series.Series'>\u001b[0m\n",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypingError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-48-696617391370>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3.5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[0minfluence\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m \u001b[0mpeak\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mthresholding_algo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mClose\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlag\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlag\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minfluence\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minfluence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpeak\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\numba\\core\\dispatcher.py\u001b[0m in \u001b[0;36m_compile_for_args\u001b[1;34m(self, *args, **kws)\u001b[0m\n\u001b[0;32m    418\u001b[0m                 \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpatch_message\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    419\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 420\u001b[1;33m             \u001b[0merror_rewrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'typing'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    421\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mUnsupportedError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    422\u001b[0m             \u001b[1;31m# Something unsupported is present in the user code, add help info\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\numba\\core\\dispatcher.py\u001b[0m in \u001b[0;36merror_rewrite\u001b[1;34m(e, issue_type)\u001b[0m\n\u001b[0;32m    359\u001b[0m                 \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    360\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 361\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    362\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    363\u001b[0m         \u001b[0margtypes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1mnon-precise type pyobject\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of argument at <ipython-input-48-696617391370> (16)\u001b[0m\n\u001b[1m\nFile \"<ipython-input-48-696617391370>\", line 16:\u001b[0m\n\u001b[1mdef thresholding_algo(y, lag, threshold, influence):\n    <source elided>\n    \"\"\"\n\u001b[1m    signals = np.zeros((3, len(y)), dtype=np.float64)  # 生成3行、len(y)列的全0二维数组\n\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n\nThis error may have been caused by the following argument(s):\n- argument 0: \u001b[1mCannot determine Numba type of <class 'pandas.core.series.Series'>\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import numba as nb\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/data.csv', parse_dates=True, index_col=0)\n",
+    "# print(df)\n",
+    "\n",
+    "@nb.jit(nopython=True)\n",
+    "def thresholding_algo(y, lag, threshold, influence):\n",
+    "    \"\"\"\n",
+    "    Robust peak detection algorithm (using z-scores)\n",
+    "    自带鲁棒性极值点识别，利用方差和ZSCORE进行时间序列极值检测。算法源自：\n",
+    "    https://stackoverflow.com/questions/22583391/\n",
+    "    本实现使用Numba JIT优化，比原版（上面）大约快了500倍。\n",
+    "    \"\"\"\n",
+    "    signals = np.zeros((3, len(y)), dtype=np.float64)  # 生成3行、len(y)列的全0二维数组\n",
+    "    idx_signals = 0\n",
+    "    idx_avgFilter = 1\n",
+    "    idx_stdFilter = 2\n",
+    "\n",
+    "    filteredY = np.copy(y)\n",
+    "    # signals二维数组的第一行全0\n",
+    "    signals[idx_avgFilter, lag-1] = np.mean(y[0:lag])  # signals二维数组第二行首个非0元素计算公式\n",
+    "    signals[idx_stdFilter, lag-1] = np.std(y[0:lag])  # signals二维数组第三行首个非0元素计算公式\n",
+    "    for i in range(lag, len(y)):\n",
+    "        # 把y当前元素与signals第二行前一个元素的差与阈值threshold乘以signals第三行前一个元素的积进行比较\n",
+    "        if abs(y[i] - signals[idx_avgFilter, i-1]) > threshold * signals[idx_stdFilter, i-1]:\n",
+    "            if y[i] > signals[idx_avgFilter, i-1]:\n",
+    "                signals[idx_signals, i] = 1\n",
+    "            else:\n",
+    "                signals[idx_signals, i] = -1\n",
+    "\n",
+    "            # filteredY从0~lag-1等于y[0:lag]，从filteredY[lag]开始\n",
+    "            # 当前元素值等于影响因子influence和y当前位置元素乘积\n",
+    "            # 并加上1-influence乘以filteredY前一位置元素\n",
+    "            filteredY[i] = influence * y[i] + (1-influence) * filteredY[i-1]\n",
+    "            # signals第二行第i+1个元素等于filteredY前lag个元素的均值\n",
+    "            signals[idx_avgFilter, i] = np.mean(filteredY[(i-lag):i])\n",
+    "            # signals第三行第i+1个元素等于filteredY前lag个元素的均值\n",
+    "            signals[idx_stdFilter, i] = np.std(filteredY[(i-lag):i])\n",
+    "        else:\n",
+    "            signals[idx_signals, i] = 0\n",
+    "            filteredY[i] = y[i]\n",
+    "            signals[idx_avgFilter, i] = np.mean(filteredY[(i-lag):i])\n",
+    "            signals[idx_stdFilter, i] = np.std(filteredY[(i-lag):i])\n",
+    "\n",
+    "    return signals\n",
+    "lag=5\n",
+    "threshold=3.5\n",
+    "influence=0.5\n",
+    "peak = thresholding_algo(df.Close, lag=lag, threshold=threshold, influence=influence)\n",
+    "print(peak)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd0718d91d85e7b59cfcf17c81aa38a885d0985cff083e53af9937fe7d5deb25dec",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -118,7 +220,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "8fac594bfae6525c0c41b4041d2d72effa188cc8ead05f81b1fab2bb098927fb"
   }
  },
  "nbformat": 4,
