--- a/run_code.ipynb
+++ b/run_code.ipynb
@@ -9,7 +9,9 @@
     "import talib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import math"
+    "import math\n",
+    "import scipy.stats as stats\n",
+    "# import numba as nb"
    ]
   },
   {
@@ -57,6 +59,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "33.42702177398123\nr=0.9572007347520146, p=1.0949189898806457e-261\nr=0.970151195194847, p=1.011772572546145e-298\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data/data.csv', parse_dates=True, index_col=0)\n",
+    "\n",
+    "def hma(array2hma: np.array, n: int = 10):\n",
+    "    return talib.WMA(2*talib.WMA(array2hma, int(n/2)) - talib.WMA(array2hma, n), int(math.sqrt(n)))\n",
+    "# print(df.columns)\n",
+    "# print(df.iloc[0:-50,3].values)\n",
+    "df = df[0:-10]\n",
+    "df['HMA10'] = hma(df['Close'].values)\n",
+    "# df['hma10'][~np.isnan(df['hma10'])]\n",
+    "# print(df['hma10'])\n",
+    "# print(df[hma10 != np.nan])\n",
+    "\n",
+    "df['POLYNOMIAL9'] = np.r_[np.full(len(df['HMA10'][np.isnan(df['HMA10'])]),np.nan),rolling_poly9(df['HMA10'][~np.isnan(df['HMA10'])].values,252)]\n",
+    "# 1）相关性系数r；2）显著性水平p。\n",
+    "# 两者的关系为：当p<0.05(或者0.01)的前提下，才可以参考r值，不能仅仅只看r值。\n",
+    "df = df.replace([np.inf, -np.inf], np.nan)\n",
+    "df = df.dropna(axis=0, how='any')\n",
+    "r,p = stats.pearsonr(df['Close'],df['POLYNOMIAL9'])  # 相关系数和P值\n",
+    "# print(df)\n",
+    "print(df['POLYNOMIAL9'][-50])\n",
+    "print('r=%r, p=%r' %(r, p))\n",
+    "r,p = stats.pearsonr(df['HMA10'],df['POLYNOMIAL9'])  # 相关系数和P值\n",
+    "print('r=%r, p=%r' %(r, p))\n",
+    "# rolling_poly9(df['HMA10'][~np.isnan(df['HMA10'])].values,252)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -81,38 +123,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data.csv', parse_dates=True, index_ocl=0)\n",
-    "def hma(array2hma: np.array, n: int = 10):\n",
-    "    return talib.WMA(2*talib.WMA(array2hma, int(n/2)) - talib.WMA(array2hma, n), int(math.sqrt(n)))\n",
-    "\n",
-    "df['HMA10'] = hma(df['Close'].values)\n",
-    "# df['hma10'][~np.isnan(df['hma10'])]\n",
-    "# print(df['hma10'])\n",
-    "# print(df[hma10 != np.nan])\n",
-    "\n",
-    "df['POLYNOMIAL9'] = np.r_[np.full(len(df['HMA10'][np.isnan(df['HMA10'])]),np.nan),rolling_poly9(df['HMA10'][~np.isnan(df['HMA10'])].values,252)]\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1. -1.  0.  0.  0.  0.  0.\n  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  1.  1.  1.  0.  0.\n  0.  0.  0.  1.  0.  0.  0.  0.  0.  0. -1.  0.  0.  1.  1.  1.  0.  0.\n  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.\n  1.  1.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  0. -1. -1. -1.  0.  0.  0. -1.  0.  0.  0.  1.  0.  0.  0.\n  0.  0.  0.  0.  0. -1. -1.  0.  0.  0.  0.  0.  0.  1.  1.  1.  1.  0.\n  0.  0.  0.  0.  1.  1.  1.  1.  1.  1.  0.  0.  0.  0.  0.  1.  1.  1.\n  1.  0.  0.  0.  0. -1.  0.  0.  0.  1.  1.  1.  0.  0.  1.  1.  1.  0.\n  0.  0.  0.  0.  0.  0. -1. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.\n -1. -1.  0.  0.  0.  0. -1.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.\n  0.  0.  0. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.\n  0.  1.  1.  1.  1.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  0. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.\n -1.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1. -1.  0.  0.  0.  1.  1.  1.\n  0.  0.  0.  1.  1.  1.  1.  0.  0.  0.  0.  0.  0.  1.  1.  0.  0.  0.\n  0.  0.  0.  0.  1.  0.  0.  0.  0.  0. -1. -1.  0.  0.  0.  0. -1.  0.\n  1.  0.  0.  0.  0.  1.  0.  0.  1.  1.  1.  0.  0.  1.  0.  0.  0.  0.\n  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  1.  1.  1.  0.  0.  0.  0.\n  0.  0. -1.  0.  0.  0.  0.  0.  0. -1.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0. -1. -1. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  1.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  1.  1.  0.  0.  0.\n  0.  0.  0.  0. -1.  0.  0.  1.  0.  0.  0.  0.  0.  0. -1.  0.  0.  0.\n  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.\n  0.  0.  0.  0.  0.  0.  0.  0. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0. -1. -1. -1.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0. -1. -1.  0.  0.\n  0.  0.  0.  0.  0.  0.  0.  0. -1.  0.  0.  0.  0.  0.  0.  0. -1. -1.\n -1.  0.  0.  0.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  0.  0.  1.  1.  0.  1.  0.  0.  0.  0.  0.  0. -1. -1. -1.\n -1.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  1.  0.  1.  0.  0.  0.  0.  0.  1.  0.  1.  1.  0.  0.  0.\n  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  0.  1.  1.  1.  1.  0.  0.  0. -1. -1. -1.  0.  0.  0.  0.\n -1. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1. -1.\n  0.  0.  0.  0. -1.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0. -1.\n  0.  0.  0.  0.  0.  0.  0.  1.  1.  1.  0.  0.  0.  0.  1.  0.  0.  0.\n  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  1.  1.  1.  0.  0.  0.  0.\n  0.  1.  1.  0.  0.  1.  1.  1.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n  0.  0.  0.  0.  0.  1.  1.  1.  1.  0.  0.  0.  0.  0.  0.  0.  0. -1.]\n"
-     ]
-    }
-   ],
-   "source": [
     "import numpy as np\n",
     "import numba as nb\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('data/data.csv', parse_dates=True, index_col=0)\n",
     "\n",
     "@nb.jit(nopython=True)\n",
     "def thresholding_algo(y, lag, threshold, influence):\n",
@@ -153,15 +167,79 @@
     "            signals[idx_avgFilter, i] = np.mean(filteredY[(i-lag):i])\n",
     "            signals[idx_stdFilter, i] = np.std(filteredY[(i-lag):i])\n",
     "\n",
-    "    return signals\n",
-    "\n",
-    "\n",
+    "    return signals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lag=5\n",
     "threshold=3.5\n",
     "influence=0.5\n",
+    "df = pd.read_csv('data/data.csv', parse_dates=True, index_col=0)\n",
     "data = np.array(df.Close)\n",
     "peak = thresholding_algo(data, lag=lag, threshold=threshold, influence=influence)[0,:]\n",
     "print(peak)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import numba as nb\n",
+    "import pandas as pd\n",
+    "import talib\n",
+    "\n",
+    "df = pd.read_csv('data/data.csv', parse_dates=True, index_col=0)\n",
+    "data = np.array(df.Close)\n",
+    "\n",
+    "\n",
+    "def ma_power(data, range_list=range(5, 30)):\n",
+    "    def inverse_num(series):\n",
+    "        # 计算逆序\n",
+    "        count = 0\n",
+    "        for i in range(len(series)-1):\n",
+    "            for j in range(i+1, len(series)):\n",
+    "                if series[i] > series[j]:\n",
+    "                    count += 1\n",
+    "            i += 1\n",
+    "        return count\n",
+    "\n",
+    "    # 准备收盘价，初始化ma多维数组\n",
+    "    ma_np = np.empty((len(data), len(range_list)))\n",
+    "    ma_count = 0\n",
+    "\n",
+    "    # 列向量对应MA5-MA30\n",
+    "    for r in range_list:\n",
+    "        ma = talib.MA(data, r)\n",
+    "        ma_np[:, ma_count] = ma\n",
+    "        ma_count += 1\n",
+    "\n",
+    "    ma_max = max(range_list)\n",
+    "    len_range_list = len(range_list)\n",
+    "    num = np.zeros(len(data))\n",
+    "    ratio = np.zeros(len(data))\n",
+    "    with np.errstate(invalid='ignore', divide='ignore'):\n",
+    "        for i in range(ma_max, len(data)):\n",
+    "            num[i] = inverse_num(ma_np[i, :])\n",
+    "            ratio[i] = num[i] / (len_range_list * (len_range_list - 1)) * 2\n",
+    "\n",
+    "    return ratio\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ma_power(data))"
    ]
   },
   {
@@ -175,7 +253,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.8.10 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,10 +265,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "interpreter": {
-   "hash": "8fac594bfae6525c0c41b4041d2d72effa188cc8ead05f81b1fab2bb098927fb"
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
