Nothing big deal.

--- a/run_code.ipynb
+++ b/run_code.ipynb
@@ -59,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "33.42702177398123\nr=0.9572007347520146, p=1.0949189898806457e-261\nr=0.970151195194847, p=1.011772572546145e-298\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('data/data.csv', parse_dates=True, index_col=0)\n",
     "\n",
@@ -247,13 +239,136 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import psycopg2\r\n",
+    "from psycopg2 import Error\r\n",
+    "\r\n",
+    "try:\r\n",
+    "    connection = psycopg2.connect(user=\"postgres\",\r\n",
+    "                                    #   password=\"postgres\",\r\n",
+    "                                      host=\"127.0.0.1\",\r\n",
+    "                                      port=\"5432\",\r\n",
+    "                                      database=\"stock\")\r\n",
+    "\r\n",
+    "    # Create a cursor to perform database operations\r\n",
+    "    cursor = connection.cursor()\r\n",
+    "    # Print PostgreSQL details\r\n",
+    "    print(\"PostgreSQL server information\")\r\n",
+    "    print(connection.get_dsn_parameters(), \"\\n\")\r\n",
+    "    # Executing a SQL query\r\n",
+    "    cursor.execute(\"SELECT version();\")\r\n",
+    "    # Fetch result\r\n",
+    "except (Exception, Error) as error:\r\n",
+    "    print(\"Error while connecting to PostgreSQL\", error)\r\n",
+    "finally:\r\n",
+    "    cursor.close()\r\n",
+    "    connection.close()\r\n",
+    "    print(\"PostgreSQL connection is closed\")\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tushare as ts\r\n",
+    "from config.essential import TOKEN\r\n",
+    "\r\n",
+    "\r\n",
+    "pro = ts.pro_api(TOKEN)\r\n",
+    "data = pro.query('stock_basic', exchange='', list_status='L', fields='ts_code,symbol,name,area,industry,list_date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-01-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\r\n",
+    "from datetime import timedelta\r\n",
+    "\r\n",
+    "res=date(2020,1,11)-timedelta(days=1)\r\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\r\n",
+    "from psycopg2 import Error\r\n",
+    "from config.essential import DB\r\n",
+    "\r\n",
+    "\r\n",
+    "try:\r\n",
+    "    # Connect to an existing database\r\n",
+    "    connection = psycopg2.connect(user=DB['username'],\r\n",
+    "                                    # password=\"123456\",\r\n",
+    "                                    host=DB['host'],\r\n",
+    "                                    port=DB['port'],\r\n",
+    "                                    database=DB['database'])\r\n",
+    "\r\n",
+    "    # Create a cursor to perform database operations\r\n",
+    "    cursor = connection.cursor()\r\n",
+    "    # Print PostgreSQL details\r\n",
+    "    # print(\"PostgreSQL server information\")\r\n",
+    "    # print(connection.get_dsn_parameters(), \"\\n\")\r\n",
+    "    # Executing a SQL query\r\n",
+    "    # cursor.execute(\"SELECT version();\")\r\n",
+    "    # Fetch result\r\n",
+    "    # record = cursor.fetchone()\r\n",
+    "    # print(\"You are connected to - \", record, \"\\n\")\r\n",
+    "    cursor.execute(data.SQL)\r\n",
+    "\r\n",
+    "except (Exception, Error) as error:\r\n",
+    "    print(\"Error while connecting to PostgreSQL\", error)\r\n",
+    "finally:\r\n",
+    "    cursor.close()\r\n",
+    "    connection.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000-01-01 00:00:00 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\r\n",
+    "from datetime import datetime as dt\r\n",
+    "a = dt.strptime('2000-01-01','%Y-%m-%d')\r\n",
+    "b = dt.strptime('2000-01-02','%Y-%m-%d')\r\n",
+    "c = (a-b).days\r\n",
+    "print(a, c)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "718d91d85e7b59cfcf17c81aa38a885d0985cff083e53af9937fe7d5deb25dec"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit ('base': conda)"
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -266,9 +381,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
