--- a/run_code.ipynb
+++ b/run_code.ipynb
@@ -413,7 +413,7 @@
     "import pandas as pd\r\n",
     "import psycopg2\r\n",
     "from psycopg2 import Error, sql\r\n",
-    "from tools.essential import DB\r\n",
+    "from config.essential import DB\r\n",
     "db=DB\r\n",
     "ticker = '000001.SZ'\r\n",
     "try:\r\n",
@@ -462,10 +462,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from tools.essential import PROXY, DB\r\n",
+    "from config.essential import PROXY, DB\r\n",
     "from datetime import datetime as dt\r\n",
     "import yfinance as yf\r\n",
-    "from tools.data import insert_ticker_data\r\n",
+    "from tools.data_yahoo import insert_ticker_data\r\n",
     "db=DB\r\n",
     "ticker = '000001.SZ'\r\n",
     "fromdate='2021-07-01'\r\n",
