--- a/run_code.ipynb
+++ b/run_code.ipynb
@@ -666,32 +666,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "source": [
     "from datetime import datetime as dt\r\n",
     "import pandas as pd\r\n",
-    "l1 = ['2006-01-01','2007-01-01','2008-01-01','2009-01-01']\r\n",
-    "l2 = [0.7,0.9,0.8,1]\r\n",
-    "timetable = pd.DataFrame(l1)\r\n",
-    "timetable = timetable.append(l2)\r\n",
+    "timetable = {'date':['2006-01-01','2007-01-01','2008-01-01','2009-01-01'], 'ratio':[0.7,0.9,0.8,1]}\r\n",
+    "timetable = pd.DataFrame(timetable)\r\n",
+    "# timetable = timetable.append(l2)\r\n",
     "print(timetable)\r\n",
-    "timetable = pd.to_datetime(timetable[0])\r\n",
+    "timetable['date'] = pd.to_datetime(timetable['date'])\r\n",
+    "timetable.set_index(keys='date', inplace=True)\r\n",
     "print(timetable)\r\n",
     "fromdate = '2005-05-05'\r\n",
-    "todate = '2005-01-01'\r\n",
+    "todate = '2006-01-01'\r\n",
     "fromdate = dt.strptime(fromdate, '%Y-%m-%d')\r\n",
     "todate = dt.strptime(todate, '%Y-%m-%d')"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "append() got an unexpected keyword argument 'axis'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-1fe0d28d2231>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0ml2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0.7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0.9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0.8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtimetable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mtimetable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtimetable\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimetable\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mtimetable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimetable\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: append() got an unexpected keyword argument 'axis'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "         date  ratio\n",
+      "0  2006-01-01    0.7\n",
+      "1  2007-01-01    0.9\n",
+      "2  2008-01-01    0.8\n",
+      "3  2009-01-01    1.0\n",
+      "            ratio\n",
+      "date             \n",
+      "2006-01-01    0.7\n",
+      "2007-01-01    0.9\n",
+      "2008-01-01    0.8\n",
+      "2009-01-01    1.0\n"
      ]
     }
    ],
